--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,6 +46,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #fff;
 }
 
 .container-btns > .num0 {
@@ -59,5 +60,6 @@ body {
 
 .container-btns > button:hover {
     background-color: #cacaca;
+    color: #000;
     cursor: pointer;
 }
