--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,11 +24,18 @@ body {
     padding: 20px;
 }
 
-.container-calculadora > #visor {
+.container-calculadora > #resultado {
     width: 100%;
     height: 50px;
     margin-bottom: 10px;
     background-color: #fff;
+    color: #000;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-size: 2em;
+    padding-right: 10px;
+    overflow: hidden;
 }
 
 .container-calculadora > .container-btns {
